# eegvis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
eegvis/: __init__.py  eegbokeh.py  eegpanel.py  montage_derivations_edf_simplified.py  montageview.py  mpl_helpers.py  nb_eegview.py  stacklineplot.py  stackplot_bokeh.py
eegvis/utils/: __init__.py  laplacian.xml
envs/: py36mayavi-environment.yml
experiments/: bokeh_ext_ts_or_es.py  eeg_app1.py  eeg_app2.py  eeg_app_add_jquery.py  example_app.py  fixed_ticks.py  heatmap_experiments.py  notes.typescript-js  simplebplot.py
experiments/eeg_keymod1/: main.py
experiments/eegapp4/: README.bokeh  keyboardresponder.ts  main.py
notebooks/: eegbrowser.ipynb  eegbrowser.py  test-bokeh-ipyEEGPlot.ipynb  test-bokeh-ipyEEGPlot.py  test-bokeh-ipyHdfEegPlot-db-eeghdf.ipynb  test-bokeh-ipyHdfEegPlot-db-eeghdf.py  test-bokeh-ipyHdfEegPlot-db.ipynb  test-bokeh-ipyHdfEegPlot-db.py  test-nb_eegview.ipynb  test-nb_eegview.py  test_stacklineplot.ipynb  use-stacklineplot-with-eeghdf-files-and-abs-gain.py  use-stacklineplot-with-eeghdf-files.ipynb  use-stacklineplot-with-eeghdf-files.py  vizSpasm-bokeh-db.ipynb  vizSpasm-bokeh-db.py  vizSpasm-doubleban.ipynb  vizSpasm-doubleban.py  vizSpasm-montage-experiments.ipynb  vizSpasm-montage-experiments.py
notes/: bokeh_notes.txt  signal slot ideas.txt
tests/: test_stacklineplot.py  use-commonref-montage.py
